test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_fail_8/src/main.nr

        fn main() -> pub u64 {
            let (a, b) = (main(), main());
            a + b
        }
        